--- a/Access.io/Base.lproj/Main.storyboard
+++ b/Access.io/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
+            <point key="canvasLocation" x="136" y="121"/>
         </scene>
         <!--LoginScreen-->
         <scene sceneID="0P6-AM-nIx">
